# sgx-thc

./: .gitignore  README.md  pwd
keys/: enclave_signing_key.pem  server.crt  thc.crt  thc.key  thc.p12
ra/: GeneralSettings.h  public.skg  report.skg  report_full.skg  report_ga.skg  report_quote.skg  report_sig.skg  secret.bb  secret.sealed  secret.sealed.bb  secrets.skg
ra/Application/: Makefile  app  core  makedebug  makerelease  sgx_app_runner_debug  sgx_app_runner_release
ra/AttestationClient/: AttestationClient.cpp  AttestationClient.h
ra/BbClient/: BbClient.cpp  BbClient.h
ra/Enclave/: Enclave.cpp  Enclave.h  SkgEnclave.cpp
ra/GoogleMessages/: Messages.pb.cc  Messages.pb.h  Messages.proto
ra/Networking/: NetworkManagerClient.h  Network_def.h
ra/ServiceProvider/: Makefile  app  makedebug
ra/SkgServer/: SkgServer.cpp  SkgServer.h
ra/Util/: UtilityFunctions.cpp  UtilityFunctions.h
ra/VerificationReport/: VerificationReport.cpp  VerificationReport.h
ra/WebService/: WebService.cpp  WebService.h
ra/playground/: cert.pem  cert_decoded  t-rsa  t-rsa.c
skg_enclave/: Makefile  app  enclave.token  makedebug
skg_enclave/App/: App.cpp  Enclave_u.c  Enclave_u.h  th_definitions.h
src/: BbConfig.h  GeneralSettings.h  public.skg  report_full.skg  report_ga.skg  report_quote.skg  report_sig.skg  secret.bb  secrets.skg  th_definitions.h  thc_ecall_types.h
src/BbApplication/: Makefile  (+7 more)
src/BbApplication/bb_enclave/test/: CMakeLists.txt  README.md  tests.cpp
test/: clean  setup  stress.py
thc/: app  enclave.token  makedebug
utils/: sgx_utils.h
(+291 files in other folders)
